# Basic_os

./: Cargo.toml  README.md
.cargo/: config.toml
src/: lib.rs  main.rs  serial.rs
src/interrupts/: gdt.rs  idt.rs  keybord.rs  mod.rs  pic.rs  timer.rs
src/vga_buffer/: console_manager.rs  hardware_interface.rs  mod.rs
tests/: idt_tests.rs  pic_tests.rs  vga_tests.rs
