[package]
name = "Basic_os"
version = "0.1.0"
edition = "2024"

[dependencies]
bootloader = "0.9.31"
volatile = "0.6.1"
spin = "0.5.2"
x86_64 = "0.15.0"
uart_16550 = "0.3"
pc-keyboard = "0.9.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]


[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none"    # ← hide the QEMU window, output goes to terminal
]
test-success-exit-code = 33
test-timeout = 300


[[test]]
name = "idt_tests"

[[test]]
name = "vga_tests"

[[test]]
name = "pic_tests"
